<resources>
    <string name="app_name">SheSave</string>
    <string name="txtLogin">Ingreso</string>
    <string name="txtEmail">Correo</string>
    <string name="txtPassword">Contraseña</string>
    <string name="txtRPassword">Repita la Contraseña</string>
    <string name="txtLogin1">No estas registrado?</string>
    <string name="txtLogin2">Registro</string>
    <string name="txtLogin3">Olvidaste tu contraseña?</string>
    <string name="txtSignIn">Registro</string>
    <string name="txtSetting">Configuracion</string>
    <string name="txtName">Nombre</string>
    <string name="txtEmail_address">***@*****.com</string>
    <string name="txtPassword_hidden">*************</string>
    <string name="txtChange_email">Cambiar Correo</string>
    <string name="txtChange_password">Cambiar Contraseña</string>
    <string name="txtAccept">Aceptar</string>
    <string name="txtContacts">Contactos de Emergencia</string>
    <string name="txtAdd_contact">Añadir Contacto</string>
    <string name="txtCountry">Pais</string>
    <string name="txtNumber">Numero</string>
    <string name="txtSave">Guardar</string>
    <string name="txtEmergency_text">Texto de Emergencia</string>
    <string name="txtReset_password">Restaurar Contraseña</string>
    <string name="txtRecording">Grabaciones</string>
    <string name="txtAudioRecording">Grabacion de audio</string>
    <string name="txtVideoRecording">Grabacion de video</string>
    <string name="txtEmergency_text_view">!!!Necesito Ayuda!!!</string>
</resources>