<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".AddContact">

    <View
        android:id="@+id/viwBar"
        android:layout_width="wrap_content"
        android:layout_height="70sp"
        android:background="@color/cian_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:backgroundTint="@color/cian_app"
        app:layout_constraintBottom_toBottomOf="@+id/viwBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viwBar"
        app:srcCompat="?attr/homeAsUpIndicator"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txtSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtContacts"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/viwBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="200sp"
        android:layout_height="200sp"
        app:layout_constraintBottom_toTopOf="@id/edtName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viwBar"
        app:srcCompat="@drawable/icon_logo"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/imgContacts"
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="15sp"
        android:adjustViewBounds="true"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/purple_app"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viwBar"
        app:srcCompat="@drawable/logo_contacts"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/md_grey_700"
        android:hint="@string/txtName"
        android:textColor="@color/md_grey_700"
        android:textColorHint="@color/md_grey_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/edtNumber"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/md_grey_700"
        android:hint="@string/txtNumber"
        android:inputType="phone"
        android:textColor="@color/md_grey_700"
        android:textColorHint="@color/md_grey_700"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtName"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="300sp"
        android:layout_height="70sp"
        android:backgroundTint="@color/purple_app"
        android:text="@string/txtSave"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>