<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".ChangePassword">

    <View
        android:id="@+id/viwBar"
        android:layout_width="wrap_content"
        android:layout_height="70sp"
        android:background="@color/cian_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:backgroundTint="@color/cian_app"
        app:layout_constraintBottom_toBottomOf="@+id/viwBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viwBar"
        app:srcCompat="?attr/homeAsUpIndicator"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtChange_password"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/viwBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="230sp"
        android:layout_height="230sp"
        android:layout_marginTop="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viwBar"
        app:srcCompat="@drawable/icon_logo"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/md_grey_700"
        android:hint="@string/txtPassword"
        android:inputType="textPassword"
        android:textColor="@color/md_grey_700"
        android:textColorHint="@color/md_grey_700"
        app:layout_constraintBottom_toTopOf="@+id/btnSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <ImageButton
        android:id="@+id/imgShowPassword"
        android:layout_width="25sp"
        android:layout_height="25sp"
        android:adjustViewBounds="true"
        android:background="@color/white"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_password_off"
        app:layout_constraintBottom_toBottomOf="@+id/edtPassword"
        app:layout_constraintEnd_toEndOf="@+id/edtPassword"
        app:layout_constraintTop_toTopOf="@+id/edtPassword"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="300sp"
        android:layout_height="70sp"
        android:backgroundTint="@color/purple_app"
        android:text="@string/txtAccept"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

</androidx.constraintlayout.widget.ConstraintLayout>